continuando implementacao do teste de agenda, base inicial de app.component.html, app.module e publicacoes.component.html

--- a/gui/info-board/src/app/app.component.html
+++ b/gui/info-board/src/app/app.component.html
@@ -1,1 +1,13 @@
 <app-navigationbar></app-navigationbar>
+
+<h1>
+  Info Board
+</h1>
+
+<nav>
+    <a name ="publicacoes" routerLink="/publicacoes">Publicações</a>
+    <a routerLink="/agenda" routerLink="/agenda">Agenda</a>
+    <a routerLink="/votacoes" routerLink="/votacoes">Votações</a>
+</nav>
+
+<router-outlet></router-outlet>
