continuando implementação de testes (pequenas alterações em agenda, autopost, favoritos e postfixo)

--- a/gui/info-board/src/app/app.component.html
+++ b/gui/info-board/src/app/app.component.html
@@ -6,8 +6,8 @@
 
 <nav>
     <a name ="publicacoes" routerLink="/publicacoes">Publicações</a>
-    <a routerLink="/agenda" routerLink="/agenda">Agenda</a>
-    <a routerLink="/votacoes" routerLink="/votacoes">Votações</a>
+    <a name="agenda" routerLink="/agenda">Agenda</a>
+    <a name="votacoes" routerLink="/votacoes">Votações</a>
 </nav>
 
 <router-outlet></router-outlet>
