--- a/gui/info-board/src/app/mural/agenda/agenda.component.html
+++ b/gui/info-board/src/app/mural/agenda/agenda.component.html
@@ -1,22 +1,36 @@
-<h2 id="tituloAgenda" >
-    Agenda
-</h2>
+<mwl-demo-utils-calendar-header
+  [(view)]="view"
+  [(viewDate)]="viewDate"
+  (viewDateChange)="fetchEvents()"
+  (viewChange)="fetchEvents()">
+</mwl-demo-utils-calendar-header>
 
-<table>
-    <tr>
-        <td>
-            <label>Data </label>
-        </td>
-        <td>
-            <label name="datebox">05/06/2018</label>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <label>Evento </label>
-        </td>
-        <td>
-            <label name="dateeventbox">Reunião X</label>
-        </td>
-    </tr>
-</table>
+<ng-template #loading>
+  <div class="text-center">
+    <i class="fa fa-spin fa-spinner fa-5x"></i>
+    <br>
+    Loading events...
+  </div>
+</ng-template>
+
+<div *ngIf="events$ | async; else loading; let events">
+  <div [ngSwitch]="view">
+    <mwl-calendar-month-view
+      *ngSwitchCase="'month'"
+      [viewDate]="viewDate"
+      [events]="events"
+      [activeDayIsOpen]="activeDayIsOpen"
+      (dayClicked)="dayClicked($event.day)">
+    </mwl-calendar-month-view>
+    <mwl-calendar-week-view
+      *ngSwitchCase="'week'"
+      [viewDate]="viewDate"
+      [events]="events">
+    </mwl-calendar-week-view>
+    <mwl-calendar-day-view
+      *ngSwitchCase="'day'"
+      [viewDate]="viewDate"
+      [events]="events">
+    </mwl-calendar-day-view>
+  </div>
+</div>
