--- a/gui/info-board/src/styles.css
+++ b/gui/info-board/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* angular-calendar css file */
+@import '../node_modules/angular-calendar/css/angular-calendar.css';
